# lore-mind-forge

./: .env  .env.example  .gitignore  .replit  AI_CEO_Platform_Complete_Technical_Documentation.md  COMMIT_EDITMSG  COMPLETE_GITHUB_SETUP.txt  Configure Run  DEPLOY_TO_GITHUB.md  GITHUB_SETUP.md  GITHUB_SETUP_MANUAL.md  Procfile  README-LOVABLE.md  README.md  RECORD  accountant.py  ad_manager.py  ad_writer.py  ads_automation.py  advanced_web_scraper.py  agent.py  agent_logic.py  agent_personalities.py  agent_session.py  agent_setup.py  agent_swarms.py  ai_ceo_saas.db  ai_memory_system.py  amazon_tool.py  analytics_panel.py  api_debug.py  api_key_fix.py  api_rate_limiter.py  api_validation.py  app_flask.py  app_saas.py  auto_ad_scaler.py  auto_loop.py  auto_product_builder.py  autonomous_goal_setter.py  (+259 more)
content_ready_to_post/: linkedin_post.txt  medium_article.md  reddit_post.txt
downloads/: Digital_Marketing_Success_Hub_Complete_Package_20250824_171937.md  Digital_Marketing_Success_Hub_Complete_Package_20250827_202927.md  Digital_Marketing_Success_Hub_Data_20250824_171937.json  E-Commerce_Success_Hub_Complete_Package_20250825_104105.md  E-Commerce_Success_Hub_Complete_Package_20250828_113154.md  E-Commerce_Success_Hub_Data_20250825_104105.json  E-Commerce_Success_Hub_Data_20250828_113154.json  Fitness_Success_Hub_Complete_Package_20250824_172957.md  Fitness_Success_Hub_Complete_Package_20250830_205606.md  Fitness_Success_Hub_Data_20250830_205606.json  Tech_Gadgets_Success_Hub_Complete_Package_20250830_205259.md
export/: products_20250805_1327.csv  (+5 more)
heads/: main
(+55 files in other folders)
