[tool.poetry]
name = "ai-ceo-agent"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "1.47.0"
pandas = "^2.2.1"
altair = "^5.3.0"
requests = "^2.32.2"
watchdog = "^4.0.0"
langchain = "^0.3.27"
langchain-community = "^0.3.27"
openai = "^1.98.0"
langchain-openai = "^0.3.28"
matplotlib = "^3.10.5"
streamlit-autorefresh = "^1.0.1"
python-dotenv = "^1.1.1"
pytrends = "^4.9.2"
numpy = "^2.3.2"
shopifyapi = "^12.7.0"
stripe = "^12.4.0"
schedule = "^1.2.2"
flask-login = "^0.6.3"
werkzeug = "^3.1.3"
itsdangerous = "^2.2.0"
flask = "^3.1.1"
flask-sqlalchemy = "^3.1.1"
plotly = "^6.2.0"
apscheduler = "^3.11.0"
gtts = "^2.5.4"
pygame = "^2.6.1"
speechrecognition = "^3.14.3"
pyaudio = "^0.2.14"
beautifulsoup4 = "^4.13.4"
sqlalchemy = "^2.0.43"
psycopg2-binary = "^2.9.10"
flask-session = "^0.8.0"
redis = "^6.4.0"
httpx = "^0.28.1"
shopify-python-api = "^1.0.1"
cryptography = "^45.0.6"
feedparser = "^6.0.11"
google-api-python-client = "^2.179.0"
google-auth = "^2.40.3"
google-auth-oauthlib = "^1.2.2"
google-auth-httplib2 = "^0.2.0"
moviepy = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"